about-us section completed

--- a/index.html
+++ b/index.html
@@ -51,23 +51,19 @@
         </div>
     </section>
     <section id="about-us">
-        <div>
+        <div class="about-us-img">
             <img src="assets/foods.png" alt="">
         </div>
-        <div aria-colcount="about-us-text-container">
+        <div class="about-us-text-container">
             <h1>We always make sure to provide you with good food</h1>
-            <p>Don’t miss a thing! Subscribe to our newsletter</p>
-            <p>Follow Us On</p>
-            <div><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028"
-                    alt=""><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028"
-                    alt=""><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028"
-                    alt=""><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028"
-                    alt="">
-                </div>
+            <p>Don't miss a thing! Subscribe to our newsletter</p>
+            <p class="social-media">Follow Us On</p>
+            <div class="social-media-img">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/2023_Facebook_icon.svg/600px-2023_Facebook_icon.svg.png?20231011122028" alt="">
+            </div>
         </div>
     </section>
 </body>
